# symbology

./: .gitignore  CLAUDE.md  Caddyfile  OPTIMIZATION_PLAN.md  README.md  ROADMAP.md  build-images.sh  chat.ipynb  cli.canvas  completion_db.ipynb  create_sample_data_fixed.py  data-clean.ipynb  docker-compose.yaml  edgartools.py  env.tpl  explore.ipynb  fields.ipynb  gemma3-4b-it.modelfile  ingest.just  justfile  management_discussion_summary.py  migrate-to-websockets.md  notebook.ipynb  ollama_client.py  package-lock.json  pro-tips.md  prompts.ipynb  pyproject.toml  refactor-plan.md  refactored_notebook.ipynb  requirements.txt  run.py  run_refactored_pipeline.py  symbology-compose.yaml  symbology.canvas  wtf.json
server/: Dockerfile  README.md  alembic.ini  justfile  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 481ecc895dd9_add_jobs_table.py  a1b2c3d45e6f_add_content_stage_to_generated_content.py  a3f7c2d91e4b_add_full_pipeline_job_type.py  b2c3d4e56f7a_normalize_enum_values_to_lowercase.py  bfea649a1a3c_initial_schema.py  c3d4e5f67a8b_add_company_group_frontpage_stage.py  c8d2e1f45a7b_add_pipeline_runs_table.py  d9e3f2a56b8c_add_token_usage_columns.py  e1f4a3b67c9d_add_cik_and_bulk_ingest.py  e4a1b3c56d9f_add_fts_search_vectors.py  f2a3b4c56d7e_drop_group_type_and_owner_id.py  f5b6a7c89d0e_add_company_groups.py  g6c7d8e90f1a_add_company_group_pipeline_job_type.py  h7d8e9f01a2b_fix_duration_ns_to_seconds.py
server/prompts/aggregate-summary/: prompt.md
server/prompts/company-group-analysis/: prompt.md
server/prompts/company-group-frontpage/: prompt.md
server/prompts/controls_procedures/: prompt.md
server/prompts/general-summary/: prompt.md
server/prompts/management_discussion/: prompt.md
server/prompts/market_risk/: prompt.md
server/symbology/api/: main.py  schemas.py
server/symbology/cli/: companies.py  db.py  documents.py  filings.py  financials.py  generated_content.py  groups.py  jobs.py  main.py  model_configs.py  pipeline.py  prompts.py  ratings.py
server/symbology/data/: sp500.csv
server/symbology/database/: __init__.py  base.py  companies.py  company_groups.py  documents.py  filings.py  financial_concepts.py  financial_values.py  generated_content.py  jobs.py  model_configs.py  pipeline_runs.py  prompts.py  ratings.py  search.py
server/symbology/ingestion/: bulk_discovery.py  ingestion_helpers.py
server/symbology/llm/: __init__.py  client.py  prompts.py
server/symbology/scheduler/: __init__.py  alerts.py  config.py  main.py  polling.py
server/symbology/utils/: config.py  logging.py  text.py
server/symbology/worker/: __init__.py  config.py  handlers.py  main.py  pipeline.py
server/tests/: conftest.py
server/tests/api/: test_companies_api.py  test_documents_api.py  test_filings_api.py  test_generated_content_api.py  test_jobs_api.py  test_pipeline_api.py  test_prompts_api.py
server/tests/cli/: test_pipeline_cli.py
server/tests/database/: README.md  conftest.py  fixtures.py  test_companies.py  test_documents.py  test_filings.py  test_financial_concepts.py  test_financial_values.py  test_generated_content.py  test_jobs.py  test_pipeline_runs.py  test_prompts.py  test_ratings.py
server/tests/ingestion/: __init__.py  test_bulk_discovery.py  test_ingestion_company.py  test_ingestion_document.py  test_ingestion_filing.py  test_ingestion_helpers.py
server/tests/scheduler/: conftest.py  test_alerts.py  test_config.py  test_main.py  test_polling.py
server/tests/utils/: test_text.py
server/tests/worker/: test_handlers.py  test_pipeline.py  test_worker.py
src/: Dockerfile  README.md  justfile  pyproject.toml
src/api/: README.md  UI Views to API & Database Functions.canvas  __init__.py  company.http  config.py  main.py  requests.http  schemas.py
src/api/routes/: __init__.py  aggregates.py  companies.py  completions.py  config.py  documents.py  filings.py  financial_statements.py  generated_content.py  llm_completions.py  logs.py  model_configs.py  prompts.py
src/api/schemas/: companies.py  completions.py  documents.py  filings.py  prompts.py
src/cli/: companies.py  documents.py  filings.py  financials.py  generated_content.py  main.py  model_configs.py  prompts.py  ratings.py
src/database/: Database.canvas  README.md  __init__.py  aggregates.py  base.py  companies.py  completions.py  documents.py  filings.py  financial_concepts.py  financial_values.py  generated_content.py  model_configs.py  pandas.py  prompts.py  ratings.py  utils.py
src/ingestion/: config.py  do_completion.py  financial_processing.py  ingestion_helpers.py  main.py  notebook.ipynb  ten_k.py  tenk_ingestion.py
src/ingestion/ai/: __init__.py  client.py  completions.py  prompts.py
src/ingestion/database/: Database.canvas  README.md  __init__.py  base.py  companies.py  completions.py  crud_ai_completion.py  crud_cash_flow.py  crud_company.py  crud_filing.py  crud_income_statement.py  crud_llm_completion.py  crud_risk_factors.py  crud_source_document.py  documents.py  filings.py  financial_concepts.py  financial_values.py  models.py  prompts.py  ratings.py
src/ingestion/edgar_db/: accessors.py
src/ingestion/llm/: README.md  __init__.py  client.py  completions.py
src/ingestion/utils/: logging.py
src/llm/: README.md  __init__.py  aggregates.py  aggregations.py  client.py  completions.py  models.py  prompts.py
src/llm/system_prompts/: business_description.md  business_description.md.tpl  general.md  management_discussion.md  risk_factors.md  (+2 more)
src/python/: __init__.py  config.py  example.json  financial_processing.py  main.py  ten_k.py
src/tests/: README.md  conftest.py
src/utils/: config.py  logging.py
(+468 files in other folders)
