[project]
name = "symbology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edgartools==3.13.3",
    "jupyter==1.1.1",
    "ollama==0.4.7",
    "pydantic==2.11.3",
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.40"
]

# [tool.uv.workspace]
# members = ["src/python"]

[tool.ruff]
# Enable flake8-bugbear (`B`) rules, and isort (`I`) for import sorting
lint.select = ["E", "F", "B", "I"]
# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    ".eggs",
    "__pycache__",
    "build",
    "dist",
]
# Same as Black
line-length = 88
# Allow unused variables when underscore-prefixed
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Target Python 3.13
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__ files

[tool.ruff.lint.isort]
known-first-party = ["symbology"]
# Enable automatic import sorting when running Ruff
# automatically-sort-imports = true
# Ensure imports are properly organized
force-single-line = false
force-sort-within-sections = true
order-by-type = false
